[workspace]
members = ["crates/*", "crates/ani/fuzz"]
resolver = "2"

[workspace.package]
repository = "https://github.com/nicdgonzalez/ani-to-xcursor"

[workspace.dependencies]
ani = { path = "./crates/ani" }
tracing = "0.1.41"

[package]
name = "ani-to-xcursor"
version = "0.2.2"
edition = "2024"
repository.workspace = true

[dependencies]
ani.workspace = true
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.8", features = ["serde"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
